--- a/lmsistts/package.json
+++ b/lmsistts/package.json
@@ -11,17 +11,22 @@
     "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
     "@mantine/core": "^8.3.5",
+    "@mantine/dates": "^8.3.5",
     "@mantine/form": "^8.3.5",
     "@mantine/hooks": "^8.3.5",
     "@mantine/notifications": "^8.3.5",
     "@tabler/icons-react": "^3.35.0",
     "@types/express": "^5.0.3",
+    "@types/lodash": "^4.17.20",
     "bcryptjs": "^3.0.2",
+    "dayjs": "^1.11.18",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.546.0",
+    "mantine-datatable": "^8.2.0",
     "mantine-form-zod-resolver": "^1.3.0",
     "mysql2": "^3.15.2",
     "next": "15.5.6",
@@ -29,6 +34,7 @@
     "pg-hstore": "^2.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "recharts": "^3.3.0",
     "sequelize": "^6.37.7",
     "zod": "^4.1.12"
   },
