--- a/lmsistts/package.json
+++ b/lmsistts/package.json
@@ -23,11 +23,13 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "framer-motion": "^12.23.24",
+    "googleapis": "^164.1.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.546.0",
     "mantine-datatable": "^8.2.0",
     "mantine-form-zod-resolver": "^1.3.0",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.2",
     "next": "15.5.6",
     "next-auth": "^4.24.11",
@@ -40,6 +42,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.19.22",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19",
