--- a/lmsistts/package.json
+++ b/lmsistts/package.json
@@ -38,6 +38,7 @@
     "react-dom": "19.1.0",
     "recharts": "^3.3.0",
     "sequelize": "^6.37.7",
+    "xendit-node": "^7.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
