--- a/lmsistts/package.json
+++ b/lmsistts/package.json
@@ -33,6 +33,7 @@
     "mysql2": "^3.15.2",
     "next": "15.5.6",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "pg-hstore": "^2.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -45,6 +46,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/multer": "^2.0.0",
     "@types/node": "^20.19.22",
+    "@types/nodemailer": "^7.0.3",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19",
     "@types/sequelize": "^4.28.20",
