--- a/lmsistts/package.json
+++ b/lmsistts/package.json
@@ -18,6 +18,7 @@
     "@tabler/icons-react": "^3.35.0",
     "@types/express": "^5.0.3",
     "@types/lodash": "^4.17.20",
+    "@vercel/blob": "^2.0.0",
     "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.18",
     "dotenv": "^17.2.3",
