--- a/lmsistts/package.json
+++ b/lmsistts/package.json
@@ -34,6 +34,7 @@
     "mysql2": "^3.15.2",
     "next": "15.5.7",
     "next-auth": "^4.24.11",
+    "nextjs-toploader": "^3.9.17",
     "nodemailer": "^6.10.1",
     "pg-hstore": "^2.3.4",
     "react": "19.1.0",
